--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,29 @@
-Seoul_Best100.pdf
+.bin
+.bin/
+.DS_Store
+.classpath
+.project
+*.class
+*.log
+*.ctxt
+.mtj.tmp/
+*.jar
+*.war
+*.ear
+*.zip
+*.tar.gz
+*.rar
+hs_err_pid*
+.chache/
+
+**/db.properties
+
+node_modules/
+.vscode/
+.gradle/
+.settings/
+bin/
+build/
+temp/
+Debug/
+Release/
