--- a/com.yummy/src/main/webapp/WEB-INF/web.xml
+++ b/com.yummy/src/main/webapp/WEB-INF/web.xml
@@ -15,7 +15,8 @@
   </filter>
   <filter-mapping>
     <filter-name>encodingFilter</filter-name>
-    <url-pattern>*.do</url-pattern>
+    <!-- <url-pattern>*.do</url-pattern> -->
+    <url-pattern>/</url-pattern>
   </filter-mapping>
 
   <filter>
@@ -24,7 +25,8 @@
   </filter>
   <filter-mapping>
     <filter-name>HTMLTagFilter</filter-name>
-    <url-pattern>*.do</url-pattern>
+    <!-- <url-pattern>*.do</url-pattern> -->
+    <url-pattern>/</url-pattern>
   </filter-mapping>
 
   <context-param>
