--- a/com.yummy/src/main/resources/egovframework/message/message-common.properties
+++ b/com.yummy/src/main/resources/egovframework/message/message-common.properties
@@ -1,11 +1,14 @@
 #UI resource#
 list.sample=List Sample
+
 button.search=\uac80\uc0c9
 button.list=\ubaa9\ub85d
 button.modify=\uc218\uc815
 button.create=\ub4f1\ub85d
 button.reset=\uc7ac\uc124\uc815
 button.delete=\uc0ad\uc81c
+button.save=\uc800\uc7a5
+
 search.choose=\uac80\uc0c9\uc5b4 \uc120\ud0dd
 search.keyword=\uac80\uc0c9\uc5b4 \uc785\ub825
 search.name=\uc774\ub984
@@ -17,11 +20,25 @@ title.sample.description=\uc124\uba85
 title.sample.regUser=\ub4f1\ub85d\uc790
 title.sample=\uae30\ubcf8 \uac8c\uc2dc\ud310 \ubaa9\ub85d
 
+title.rst.info=\uc0c1\uc138 \uc815\ubcf4 \uad00\ub9ac
 title.rst.id=\uc2dd\ub2f9 ID
 title.rst.name=\uc2dd\ub2f9 \uba85
 title.rst.star=\ubbf8\uc290\ub7ad \ubcc4\uc810
-title.rst.loc=\uc2dd\ub2f9 \uc704\uce58
+title.rst.loc=\uc9c0\uc5ed
+title.rst.loc_dtl=\uc0c1\uc138 \uc8fc\uc18c
+title.rst.upper_catag=\uc694\ub9ac \uc720\ud615 \ub300\ubd84\ub958
 title.rst.catag=\uc694\ub9ac \uc720\ud615
+title.rst.tel=\uc804\ud654\ubc88\ud638
+title.rst.opn_tm=\uc624\ud508 \uc2dc\uac04
+title.rst.brck_tm=\uc26c\ub294 \uc2dc\uac04
+title.rst.dnnr_tm=\uc800\ub141 \uc601\uc5c5 \uc2dc\uac04
+title.rst.lo_tm=\uc8fc\ubb38 \ub9c8\uac10 \uc2dc\uac04
+
+star.-2=The Plate
+star.-1=Bib Gourmand
+star.1=1 Star
+star.2=2 Star
+star.3=3 Star
 
 
 # image name #
