--- a/com.yummy/src/main/resources/egovframework/message/message-common.properties
+++ b/com.yummy/src/main/resources/egovframework/message/message-common.properties
@@ -33,6 +33,7 @@ title.rst.opn_tm=\uc624\ud508 \uc2dc\uac04
 title.rst.brck_tm=\uc26c\ub294 \uc2dc\uac04
 title.rst.dnnr_tm=\uc800\ub141 \uc601\uc5c5 \uc2dc\uac04
 title.rst.lo_tm=\uc8fc\ubb38 \ub9c8\uac10 \uc2dc\uac04
+title.rst.create=\uc2dd\ub2f9 \ub4f1\ub85d
 
 star.-2=The Plate
 star.-1=Bib Gourmand
