--- a/com.yummy/src/main/resources/egovframework/message/message-common.properties
+++ b/com.yummy/src/main/resources/egovframework/message/message-common.properties
@@ -44,6 +44,11 @@ star.3=3 Star
 mode.create=\uc2dd\ub2f9 \uc2e0\uaddc \ub4f1\ub85d
 mode.modify=\uc0c1\uc138\uc815\ubcf4
 
+rvw.id=\uac8c\uc2dc\uc790
+rvw.cont=\ub0b4\uc6a9
+rvw.score=\ud3c9\uac00
+rvw.cdt=\uc791\uc131\uc77c
+
 
 # image name #
 image.search=btn_form_search.gif
