--- a/com.yummy/src/main/resources/egovframework/message/message-common.properties
+++ b/com.yummy/src/main/resources/egovframework/message/message-common.properties
@@ -51,6 +51,13 @@ rvw.cont=\ub0b4\uc6a9
 rvw.score=\ud3c9\uac00
 rvw.cdt=\uc791\uc131\uc77c
 
+rvw.best=\uac15\ub825\ucd94\ucc9c
+rvw.good=\ub9db\uc9d1
+rvw.soso=\ubb34\ub09c\ud568
+rvw.bad=\ubcc4\ub85c\uc784
+rvw.worst=\ucd5c\uc545\uc784
+rvw.cnt=\ud3c9\uac00\uc790 \uc218
+rvw.grade=\ud3c9\uc810
 
 # image name #
 image.search=btn_form_search.gif
