--- a/com.yummy/src/main/resources/egovframework/message/message-common.properties
+++ b/com.yummy/src/main/resources/egovframework/message/message-common.properties
@@ -51,11 +51,11 @@ rvw.cont=\ub0b4\uc6a9
 rvw.score=\ud3c9\uac00
 rvw.cdt=\uc791\uc131\uc77c
 
-rvw.best=\uac15\ub825\ucd94\ucc9c
-rvw.good=\ub9db\uc9d1
-rvw.soso=\ubb34\ub09c\ud568
-rvw.bad=\ubcc4\ub85c\uc784
-rvw.worst=\ucd5c\uc545\uc784
+rvw.best=5 \uc810
+rvw.good=4 \uc810
+rvw.soso=3 \uc810
+rvw.bad=2 \uc810
+rvw.worst=1 \uc810
 rvw.cnt=\ud3c9\uac00\uc790 \uc218
 rvw.grade=\ud3c9\uc810
 
