--- a/com.yummy/src/main/resources/egovframework/message/message-common.properties
+++ b/com.yummy/src/main/resources/egovframework/message/message-common.properties
@@ -57,7 +57,8 @@ rvw.soso=3 \uc810
 rvw.bad=2 \uc810
 rvw.worst=1 \uc810
 rvw.cnt=\ud3c9\uac00\uc790 \uc218
-rvw.grade=\ud3c9\uc810
+rvw.avg=\ub124\ud2f0\uc98c \ud3c9\uc810
+rvw.grade=\uc790\uccb4 \ud3c9\uc810
 
 # image name #
 image.search=btn_form_search.gif
