--- a/MyApplication/app/build.gradle
+++ b/MyApplication/app/build.gradle
@@ -35,7 +35,6 @@ ext {
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation 'com.android.support:appcompat-v7:28.0.0'
-    implementation 'com.android.support.constraint:constraint-layout:1.1.3'
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
@@ -45,7 +44,7 @@ dependencies {
     //  Java Object를 JSON으로 바꿔주는 컨버터
     implementation 'com.squareup.retrofit2:converter-gson:2.2.0'
     //  Header정보에 Token정보를 설정해 주거나, 로깅과 관련된 추가적인 Lib를 프로젝트에 추가 및 설정하여 사용.
-    implementation "com.squareup.okhttp3:okhttp:3.9.0"
+    //implementation "com.squareup.okhttp3:okhttp:3.9.0"
 
 
     implementation 'com.android.support:recyclerview-v7:28.0.0'
