--- a/APP_EX/app/build.gradle
+++ b/APP_EX/app/build.gradle
@@ -30,4 +30,6 @@ dependencies {
     implementation 'com.android.support:cardview-v7:28.0.0'
     implementation 'com.squareup.retrofit2:retrofit:2.0.0-beta4'
     implementation 'com.squareup.retrofit2:converter-gson:2.0.0-beta4'
+
+    implementation 'com.squareup.okhttp3:logging-interceptor:3.9.1'
 }
