--- a/APP_EX/app/build.gradle
+++ b/APP_EX/app/build.gradle
@@ -31,5 +31,6 @@ dependencies {
     implementation 'com.squareup.retrofit2:retrofit:2.0.0-beta4'
     implementation 'com.squareup.retrofit2:converter-gson:2.0.0-beta4'
 
+    /*  LOG를 위한 LIB  */
     implementation 'com.squareup.okhttp3:logging-interceptor:3.9.1'
 }
