--- a/APP_EX/app/build.gradle
+++ b/APP_EX/app/build.gradle
@@ -31,11 +31,15 @@ dependencies {
     implementation 'com.squareup.retrofit2:retrofit:2.0.0-beta4'
     implementation 'com.squareup.retrofit2:converter-gson:2.0.0-beta4'
 
-    /*  LOG를 위한 LIB  */
+    //  LOG를 위한 LIB
     implementation 'com.squareup.okhttp3:logging-interceptor:3.9.1'
 
+    //  구글 api를 사용하기 위한 지원 LIB
     implementation 'com.android.support:support-v4:28.0.0'
-
+    //  구글 지도를 사용하기 위한 LIB
     implementation 'com.google.android.gms:play-services-maps:15.0.1'
     implementation 'com.google.android.gms:play-services-location:15.0.1'
+
+    //  image를 url로 가져오기위한 picasso LIB
+    implementation 'com.squareup.picasso:picasso:2.3.3'
 }
