--- a/com.yummy/src/main/resources/egovframework/message/message-common.properties
+++ b/com.yummy/src/main/resources/egovframework/message/message-common.properties
@@ -64,6 +64,8 @@ rvw.grade=\uc790\uccb4 \ud3c9\uc810
 image.search=btn_form_search.gif
 image.errorBg=error
 
+title.phot=\uC0AC\uC9C4
+
 # -- validator errors -- #
 fail.common.msg=\uc5d0\ub7ec\uac00 \ubc1c\uc0dd\ud588\uc2b5\ub2c8\ub2e4!
 fail.common.sql=sql \uc5d0\ub7ec\uac00 \ubc1c\uc0dd\ud588\uc2b5\ub2c8\ub2e4! error code: {0}, error msg: {1}
