--- a/APP_EX/app/build.gradle
+++ b/APP_EX/app/build.gradle
@@ -26,10 +26,16 @@ dependencies {
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
 
+    //
     implementation 'com.android.support:recyclerview-v7:28.0.0'
+    //
     implementation 'com.android.support:cardview-v7:28.0.0'
+    //
     implementation 'com.squareup.retrofit2:retrofit:2.0.0-beta4'
+    //
     implementation 'com.squareup.retrofit2:converter-gson:2.0.0-beta4'
+    //
+    implementation 'com.squareup.retrofit2:converter-scalars:2.3.0'
 
     //  LOG를 위한 LIB
     implementation 'com.squareup.okhttp3:logging-interceptor:3.9.1'
