--- a/APP_EX/app/build.gradle
+++ b/APP_EX/app/build.gradle
@@ -36,6 +36,13 @@ dependencies {
     implementation 'com.squareup.retrofit2:converter-gson:2.0.0-beta4'
     //
     implementation 'com.squareup.retrofit2:converter-scalars:2.3.0'
+    //
+    implementation 'commons-io:commons-io:2.4'
+/*    //
+    implementation 'com.wealdtech.hawk:hawk-core:1.2.0'
+    //
+    implementation group: 'hawk', name: 'hawk', version: '0.2.11'*/
+
 
     //  LOG를 위한 LIB
     implementation 'com.squareup.okhttp3:logging-interceptor:3.9.1'
