--- a/com.yummy/pom.xml
+++ b/com.yummy/pom.xml
@@ -67,16 +67,19 @@
         </exclusion>
       </exclusions>
     </dependency>
+    
     <dependency>
       <groupId>egovframework.rte</groupId>
       <artifactId>egovframework.rte.psl.dataaccess</artifactId>
       <version>${egovframework.rte.version}</version>
     </dependency>
+    
     <dependency>
       <groupId>egovframework.rte</groupId>
       <artifactId>egovframework.rte.fdl.idgnr</artifactId>
       <version>${egovframework.rte.version}</version>
     </dependency>
+    
     <dependency>
       <groupId>egovframework.rte</groupId>
       <artifactId>egovframework.rte.fdl.property</artifactId>
@@ -108,13 +111,16 @@
       <version>3.5</version>
     </dependency>
 
+    
+    <!-- 
     <dependency>
       <groupId>org.hsqldb</groupId>
       <artifactId>hsqldb</artifactId>
       <version>2.3.2</version>
     </dependency>
-
-    <!-- mysql이나 oracle DB 사용시 아래 설정 추가 -->
+     -->
+    
+    <!-- Log를 위한 Dependency -->
     <dependency>
       <groupId>com.googlecode.log4jdbc</groupId>
       <artifactId>log4jdbc</artifactId>
@@ -132,7 +138,9 @@
       <artifactId>log4jdbc-log4j2-jdbc4</artifactId>
       <version>1.16</version>
     </dependency>
+    <!-- Log를 위한 Dependency -->
 
+    <!-- DB 연결을 위한 Dependency -->
     <dependency>
       <groupId>commons-dbcp</groupId>
       <artifactId>commons-dbcp</artifactId>
@@ -156,11 +164,10 @@
       <artifactId>mybatis-spring</artifactId>
       <version>1.3.2</version>
     </dependency>
-    <!-- <dependency> <groupId>ojdbc</groupId> <artifactId>ojdbc</artifactId> 
-      <version>14</version> <scope>system</scope> <systemPath>${basedir}/src/main/webapp/WEB-INF/lib/ojdbc-14.jar</systemPath> 
-      </dependency> -->
+    <!-- DB 연결을 위한 Dependency -->
+
       
-    <!-- JSON -->
+    <!-- JSON을 위항 Dependency -->
     <dependency>
        <groupId>net.sf.json-lib</groupId>
        <artifactId>json-lib</artifactId>
@@ -179,8 +186,10 @@
       <artifactId>jackson-databind</artifactId>
       <version>2.9.5</version>
     </dependency>
+    <!-- JSON을 위항 Dependency -->
     
-    <!-- MultipartHttpServletRequset -->
+    <!-- Multipart Request를 위한 Dependency -->
+    <!-- File IO에 관련된 LIB -->
     <dependency>
       <groupId>commons-io</groupId>
       <artifactId>commons-io</artifactId>
@@ -192,8 +201,10 @@
       <artifactId>commons-fileupload</artifactId>
       <version>1.2.2</version>
     </dependency>
+    <!-- Multipart Request를 위한 Dependency -->
     
   </dependencies>
+
 
   <build>
     <defaultGoal>install</defaultGoal>
@@ -287,6 +298,8 @@
       </plugin>
     </plugins>
   </build>
+
+
   <reporting>
     <outputDirectory>${basedir}/target/site</outputDirectory>
     <plugins>
@@ -352,4 +365,5 @@
       </plugin>
     </plugins>
   </reporting>
+  
 </project>
