--- a/com.yummy/pom.xml
+++ b/com.yummy/pom.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+<project xmlns="http://maven.apache.org/POM/4.0.0"
+  xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
   xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
   <modelVersion>4.0.0</modelVersion>
   <groupId>com</groupId>
@@ -67,19 +68,19 @@
         </exclusion>
       </exclusions>
     </dependency>
-    
+
     <dependency>
       <groupId>egovframework.rte</groupId>
       <artifactId>egovframework.rte.psl.dataaccess</artifactId>
       <version>${egovframework.rte.version}</version>
     </dependency>
-    
+
     <dependency>
       <groupId>egovframework.rte</groupId>
       <artifactId>egovframework.rte.fdl.idgnr</artifactId>
       <version>${egovframework.rte.version}</version>
     </dependency>
-    
+
     <dependency>
       <groupId>egovframework.rte</groupId>
       <artifactId>egovframework.rte.fdl.property</artifactId>
@@ -111,15 +112,10 @@
       <version>3.5</version>
     </dependency>
 
-    
-    <!-- 
-    <dependency>
-      <groupId>org.hsqldb</groupId>
-      <artifactId>hsqldb</artifactId>
-      <version>2.3.2</version>
-    </dependency>
-     -->
-    
+
+    <!-- <dependency> <groupId>org.hsqldb</groupId> <artifactId>hsqldb</artifactId> 
+      <version>2.3.2</version> </dependency> -->
+
     <!-- Log를 위한 Dependency -->
     <dependency>
       <groupId>com.googlecode.log4jdbc</groupId>
@@ -166,28 +162,28 @@
     </dependency>
     <!-- DB 연결을 위한 Dependency -->
 
-      
+
     <!-- JSON을 위항 Dependency -->
     <dependency>
-       <groupId>net.sf.json-lib</groupId>
-       <artifactId>json-lib</artifactId>
-       <version>2.4</version>
-       <classifier>jdk15</classifier>
+      <groupId>net.sf.json-lib</groupId>
+      <artifactId>json-lib</artifactId>
+      <version>2.4</version>
+      <classifier>jdk15</classifier>
     </dependency>
-    
+
     <dependency>
-       <groupId>org.codehaus.jackson</groupId>
-       <artifactId>jackson-mapper-asl</artifactId>
-       <version>1.9.13</version>
+      <groupId>org.codehaus.jackson</groupId>
+      <artifactId>jackson-mapper-asl</artifactId>
+      <version>1.9.13</version>
     </dependency>
-    
+
     <dependency>
       <groupId>com.fasterxml.jackson.core</groupId>
       <artifactId>jackson-databind</artifactId>
       <version>2.9.5</version>
     </dependency>
     <!-- JSON을 위항 Dependency -->
-    
+
     <!-- Multipart Request를 위한 Dependency -->
     <!-- File IO에 관련된 LIB -->
     <dependency>
@@ -202,7 +198,88 @@
       <version>1.2.2</version>
     </dependency>
     <!-- Multipart Request를 위한 Dependency -->
-    
+
+    <dependency>
+      <groupId>org.apache.tiles</groupId>
+      <artifactId>tiles-core</artifactId>
+      <version>3.0.5</version>
+      <!-- needed to exclude slf4j which causes incompatibilities -->
+      <exclusions>
+        <exclusion>
+          <groupId>org.slf4j</groupId>
+          <artifactId>slf4j-nop</artifactId>
+        </exclusion>
+        <exclusion>
+          <groupId>org.slf4j</groupId>
+          <artifactId>slf4j-api</artifactId>
+        </exclusion>
+        <exclusion>
+          <groupId>org.slf4j</groupId>
+          <artifactId>jcl-over-slf4j</artifactId>
+        </exclusion>
+      </exclusions>
+    </dependency>
+    <dependency>
+      <groupId>org.apache.tiles</groupId>
+      <artifactId>tiles-servlet</artifactId>
+      <version>3.0.5</version>
+      <!-- needed to exclude slf4j which causes incompatibilities -->
+      <exclusions>
+        <exclusion>
+          <groupId>org.slf4j</groupId>
+          <artifactId>slf4j-nop</artifactId>
+        </exclusion>
+        <exclusion>
+          <groupId>org.slf4j</groupId>
+          <artifactId>slf4j-api</artifactId>
+        </exclusion>
+        <exclusion>
+          <groupId>org.slf4j</groupId>
+          <artifactId>jcl-over-slf4j</artifactId>
+        </exclusion>
+      </exclusions>
+    </dependency>
+    <dependency>
+      <groupId>org.apache.tiles</groupId>
+      <artifactId>tiles-jsp</artifactId>
+      <version>3.0.5</version>
+      <!-- needed to exclude slf4j which causes incompatibilities -->
+      <exclusions>
+        <exclusion>
+          <groupId>org.slf4j</groupId>
+          <artifactId>slf4j-nop</artifactId>
+        </exclusion>
+        <exclusion>
+          <groupId>org.slf4j</groupId>
+          <artifactId>slf4j-api</artifactId>
+        </exclusion>
+        <exclusion>
+          <groupId>org.slf4j</groupId>
+          <artifactId>jcl-over-slf4j</artifactId>
+        </exclusion>
+      </exclusions>
+    </dependency>
+    <dependency>
+      <groupId>org.apache.tiles</groupId>
+      <artifactId>tiles-extras</artifactId>
+      <version>3.0.5</version>
+      <!-- needed to exclude slf4j which causes incompatibilities -->
+      <exclusions>
+        <exclusion>
+          <groupId>org.slf4j</groupId>
+          <artifactId>slf4j-nop</artifactId>
+        </exclusion>
+        <exclusion>
+          <groupId>org.slf4j</groupId>
+          <artifactId>slf4j-api</artifactId>
+        </exclusion>
+        <exclusion>
+          <groupId>org.slf4j</groupId>
+          <artifactId>jcl-over-slf4j</artifactId>
+        </exclusion>
+      </exclusions>
+    </dependency>
+
   </dependencies>
 
 
@@ -365,5 +442,5 @@
       </plugin>
     </plugins>
   </reporting>
-  
+
 </project>
