--- a/APP_EX/app/src/main/AndroidManifest.xml
+++ b/APP_EX/app/src/main/AndroidManifest.xml
@@ -1,20 +1,19 @@
 <?xml version="1.0" encoding="utf-8"?>
-<manifest
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.app">
     <!--
     애플리케이션이 권한으로 보호되는 기능에 액세스해야 하는 경우,
     매니페스트에 <uses-permission> 요소를 사용하여 해당 권한이 필요하다는 것을 선언해야 함.
     -->
     <!-- 인터넷 사용 권한 -->
-    <uses-permission android:name="android.permission.INTERNET" />
-    <!-- 저장 공간 쓰기 권한 -->
-    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
-    <!-- 저장 공간 읽기 권한 -->
-    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE"/>
-    <!-- 카메라 사용 권한 -->
-    <uses-permission android:name="android.permission.CAMERA"/>
-    <uses-feature android:name="android.hardware.camera" android:required="true" />
+    <uses-permission android:name="android.permission.INTERNET" /> <!-- 저장 공간 쓰기 권한 -->
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" /> <!-- 저장 공간 읽기 권한 -->
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" /> <!-- 카메라 사용 권한 -->
+    <uses-permission android:name="android.permission.CAMERA" />
+
+    <uses-feature
+        android:name="android.hardware.camera"
+        android:required="true" />
 
     <application
         android:allowBackup="true"
@@ -23,23 +22,23 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-
+        <activity android:name=".Rvw.RvwDetail"></activity>
         <!-- 여기부터 구글 지도를 사용하기 위한 API KEY -->
         <meta-data
             android:name="com.google.android.geo.API_KEY"
-            android:value="AIzaSyCAIR-SADIF2z-uuhbPj2XGehv_LoFrH7c" />
-        <!-- 여기까지 구글 지도를 사용하기 위한 API KEY -->
-
+            android:value="AIzaSyCAIR-SADIF2z-uuhbPj2XGehv_LoFrH7c" /> <!-- 여기까지 구글 지도를 사용하기 위한 API KEY -->
         <activity android:name=".Rst.RstDetail" />
-        <activity android:name=".Rvw.RvwPOST"></activity>
+        <activity android:name=".Rvw.RvwPOST" />
         <activity android:name=".Rvw.RvwList" />
         <activity android:name=".MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
+
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <!-- 여기부터 FileProvider
+        <!--
+ 여기부터 FileProvider
              애플리케이션에 의해 관리되는 데이터에 구조화 된 액세스를 제공 하는 서브 클래스
         -->
         <provider
@@ -49,10 +48,8 @@
             android:grantUriPermissions="true">
             <meta-data
                 android:name="android.support.FILE_PROVIDER_PATHS"
-                android:resource="@xml/file_paths"></meta-data>
+                android:resource="@xml/file_paths" />
         </provider>
-        <!-- 여기까지 FileProvider -->
-
     </application>
 
 </manifest>
