--- a/com.yummy/pom.xml
+++ b/com.yummy/pom.xml
@@ -163,7 +163,7 @@
     <!-- DB 연결을 위한 Dependency -->
 
 
-    <!-- JSON을 위항 Dependency -->
+    <!-- JSON을 위한 Dependency -->
     <dependency>
       <groupId>net.sf.json-lib</groupId>
       <artifactId>json-lib</artifactId>
@@ -182,7 +182,7 @@
       <artifactId>jackson-databind</artifactId>
       <version>2.9.5</version>
     </dependency>
-    <!-- JSON을 위항 Dependency -->
+    <!-- JSON을 위한 Dependency -->
 
     <!-- Multipart Request를 위한 Dependency -->
     <!-- File IO에 관련된 LIB -->
@@ -198,87 +198,8 @@
       <version>1.2.2</version>
     </dependency>
     <!-- Multipart Request를 위한 Dependency -->
-
-    <dependency>
-      <groupId>org.apache.tiles</groupId>
-      <artifactId>tiles-core</artifactId>
-      <version>3.0.5</version>
-      <!-- needed to exclude slf4j which causes incompatibilities -->
-      <exclusions>
-        <exclusion>
-          <groupId>org.slf4j</groupId>
-          <artifactId>slf4j-nop</artifactId>
-        </exclusion>
-        <exclusion>
-          <groupId>org.slf4j</groupId>
-          <artifactId>slf4j-api</artifactId>
-        </exclusion>
-        <exclusion>
-          <groupId>org.slf4j</groupId>
-          <artifactId>jcl-over-slf4j</artifactId>
-        </exclusion>
-      </exclusions>
-    </dependency>
-    <dependency>
-      <groupId>org.apache.tiles</groupId>
-      <artifactId>tiles-servlet</artifactId>
-      <version>3.0.5</version>
-      <!-- needed to exclude slf4j which causes incompatibilities -->
-      <exclusions>
-        <exclusion>
-          <groupId>org.slf4j</groupId>
-          <artifactId>slf4j-nop</artifactId>
-        </exclusion>
-        <exclusion>
-          <groupId>org.slf4j</groupId>
-          <artifactId>slf4j-api</artifactId>
-        </exclusion>
-        <exclusion>
-          <groupId>org.slf4j</groupId>
-          <artifactId>jcl-over-slf4j</artifactId>
-        </exclusion>
-      </exclusions>
-    </dependency>
-    <dependency>
-      <groupId>org.apache.tiles</groupId>
-      <artifactId>tiles-jsp</artifactId>
-      <version>3.0.5</version>
-      <!-- needed to exclude slf4j which causes incompatibilities -->
-      <exclusions>
-        <exclusion>
-          <groupId>org.slf4j</groupId>
-          <artifactId>slf4j-nop</artifactId>
-        </exclusion>
-        <exclusion>
-          <groupId>org.slf4j</groupId>
-          <artifactId>slf4j-api</artifactId>
-        </exclusion>
-        <exclusion>
-          <groupId>org.slf4j</groupId>
-          <artifactId>jcl-over-slf4j</artifactId>
-        </exclusion>
-      </exclusions>
-    </dependency>
-    <dependency>
-      <groupId>org.apache.tiles</groupId>
-      <artifactId>tiles-extras</artifactId>
-      <version>3.0.5</version>
-      <!-- needed to exclude slf4j which causes incompatibilities -->
-      <exclusions>
-        <exclusion>
-          <groupId>org.slf4j</groupId>
-          <artifactId>slf4j-nop</artifactId>
-        </exclusion>
-        <exclusion>
-          <groupId>org.slf4j</groupId>
-          <artifactId>slf4j-api</artifactId>
-        </exclusion>
-        <exclusion>
-          <groupId>org.slf4j</groupId>
-          <artifactId>jcl-over-slf4j</artifactId>
-        </exclusion>
-      </exclusions>
-    </dependency>
+    
+    <!-- Apache Tile를 적용 하고 싶었으나 중요한 기능이 아닌것 같아서 몇번 시도하고 누락 했음... -->
 
   </dependencies>
 
