--- a/com.yummy/src/main/resources/egovframework/message/message-common.properties
+++ b/com.yummy/src/main/resources/egovframework/message/message-common.properties
@@ -50,6 +50,7 @@ rvw.no=\ud6c4\uae30\ubc88\ud638
 rvw.cont=\ub0b4\uc6a9
 rvw.score=\ud3c9\uac00
 rvw.cdt=\uc791\uc131\uc77c
+rvw.phot=\uC0AC\uC9C4
 
 rvw.best=5 \uc810
 rvw.good=4 \uc810
