--- a/APP_EX/app/src/main/AndroidManifest.xml
+++ b/APP_EX/app/src/main/AndroidManifest.xml
@@ -6,10 +6,14 @@
     매니페스트에 <uses-permission> 요소를 사용하여 해당 권한이 필요하다는 것을 선언해야 함.
     -->
     <!-- 인터넷 사용 권한 -->
-    <uses-permission android:name="android.permission.INTERNET" /> <!-- 저장 공간 쓰기 권한 -->
-    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" /> <!-- 저장 공간 읽기 권한 -->
-    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" /> <!-- 카메라 사용 권한 -->
+    <uses-permission android:name="android.permission.INTERNET" />
+    <!-- 저장 공간 쓰기 권한 -->
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+    <!-- 저장 공간 읽기 권한 -->
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
+    <!-- 카메라 사용 권한 -->
     <uses-permission android:name="android.permission.CAMERA" />
+    <!-- 전화 걸기 권한 -->
     <uses-permission android:name="android.permission.CALL_PHONE" />
 
     <uses-feature
@@ -23,15 +27,16 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme"
+        android:screenOrientation="portrait"
         android:usesCleartextTraffic="true">
-        <activity
-            android:name=".Menu.MenuList"
-            android:theme="@style/Theme.MaterialComponents.Dialog"/>
         <!-- 여기부터 구글 지도를 사용하기 위한 API KEY -->
         <meta-data
             android:name="com.google.android.geo.API_KEY"
             android:value="AIzaSyCAIR-SADIF2z-uuhbPj2XGehv_LoFrH7c" />
         <!-- 여기까지 구글 지도를 사용하기 위한 API KEY -->
+        <activity
+            android:name=".Menu.MenuList"
+            android:theme="@style/Theme.MaterialComponents.Dialog"/>
         <activity
             android:name=".Rvw.RvwDetail"
             android:theme="@style/Theme.MaterialComponents.Dialog" />
